1)Made Header Sticky 2)Corrected Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ form .btn{
 }
 
 .pageHeader{
-    padding: 8rem 3rem 8rem;
+    padding: 5rem 3rem 5rem;
     position: relative;
     z-index: 99;
     height: auto;
@@ -185,6 +185,15 @@ form .btn{
 }
 
 /*Header_________________________________________________________*/
+
+header{
+    position:sticky; 
+    top:0; 
+    left:0; 
+    z-index:102;  
+    background-color: var(--primary-color); 
+}
+
 nav ul li{ 
     font-weight: bold;
     text-transform: uppercase;
@@ -215,17 +224,18 @@ nav .btn{
 nav .btn:hover,nav .btn:focus{
     background: rgba(0, 0, 0,0.2);
 }
+
 .headeritems,.footeritems{
     display: flex;
-    padding: 35px 15px;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
+
 }
 
 .headeritems{
-    position: absolute;
     width: 100%;
     z-index: 100;
+    padding: 10px 10px;
 }
 
 .section1 h2{
@@ -261,6 +271,7 @@ nav .btn:hover,nav .btn:focus{
     background-color:var(--primary-color);
     margin-top: 0.8rem;
     padding: 3rem 1rem;
+    padding: 35px 15px;
 }
 .footeritem1{
     max-width: 50%;
@@ -300,6 +311,10 @@ nav .btn:hover,nav .btn:focus{
 
 .footeritems li a:hover,.footeritems ul li a:focus{
     border-bottom:1px black solid;
+}
+
+#home,#about,#contact{
+    padding-top: 4rem;
 }
 
 /*Home_________________________________________________________*/
@@ -451,7 +466,7 @@ code{
 /*about_________________________________________________________*/
 
 .about-container{
-    max-width: 75%;
+    max-width: 80%;
     margin: 50px auto auto;
 }
 
@@ -510,7 +525,6 @@ code{
 }
 
 .our-collaborations{
-    padding: 1rem 0;
     margin-top: 3rem;
 }
 
@@ -543,11 +557,12 @@ code{
 
 /*Contact_________________________________________________________*/
 .showcase{
-    margin: 50px auto auto;
+    margin: 2rem auto auto; 
+    width: 80%;
 }
 
 .showcase .container{
-    padding: 1rem;   
+    padding: 1rem;
 }
 
 .showcase .grid-of3 h4{
